added about to netcdf, cserv cards. fixed labels

--- a/templates/WebApp/about_about.html
+++ b/templates/WebApp/about_about.html
@@ -8,10 +8,11 @@
                     <h1 class="modal-title fs-5" id="aboutModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                                <div class="modal-body">
+                <div class="modal-body">
                     <div class="container">
                         <h2>About Page</h2>
-                        <p>This about page is designed to provide a quick overview of the concepts behind the application,
+                        <p>This about page is designed to provide a quick overview of the concepts behind the
+                            application,
                             the team members, disclaimer and logos.</p>
                         <ul>
                             <li>The layout and content of this page is defined in the template
