--- a/templates/WebApp/map_fixedsize_about.html
+++ b/templates/WebApp/map_fixedsize_about.html
@@ -11,7 +11,8 @@
                 <div class="modal-body">
                     <div class="container">
                         <h2>Display WMS on fixed size map</h2>
-                        <p>This page is designed to provide visualization of WMS layers from different servers like Thredds and MapServer. In this template we are using CHIRPS and ESI layers.</p>
+                        <p>This page is designed to provide visualization of WMS layers from different servers like
+                            Thredds and MapServer. In this template we are using CHIRPS and ESI layers.</p>
                         <ul>
                             <li>The layout and content of this page is defined in the template
                                 located at
@@ -20,7 +21,9 @@
                             </li>
                             <li>For layout and styling we rely on standard bootstrap containers, however,
                                 you can add your own CSS classes in the
-                                <mark>WebApp\static\css\base.css</mark> and <mark>WebApp\static\css\fixed_map.css</mark>
+                                <mark>WebApp\static\css\base.css</mark>
+                                and
+                                <mark>WebApp\static\css\fixed_map.css</mark>
                                 files.
                             </li>
                             </li>
@@ -29,7 +32,8 @@
                                 <mark>WebApp\static\js\map_fixedsize.js</mark>
                                 .
                             </li>
-                            <li>The code for this Django view is in the <strong>map_fixed_size</strong> function, located in
+                            <li>The code for this Django view is in the <strong>map_fixed_size</strong> function,
+                                located in
                                 <mark>WebApp\views.py</mark>
                             </li>
                             <li>The URL for this page is defined through the <strong>urlpatterns</strong>
