--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -87,7 +87,7 @@
                                     <div class="accordion-body">
                                         <div>
                                             <div class="">
-{#                                                container mt-3#}
+                                                {#                                                container mt-3#}
                                                 <ul class="m-0 nav nav-fill nav-justified nav-tabs"
                                                     id="gee_tab_list" role="tablist">
                                                     <li class="nav-item" role="presentation">
@@ -133,7 +133,8 @@
                                                                                        type="checkbox"/>Image
                                                             Collection Layer</label>
 
-                                                        <a role="button" class="float-right" href=#" data-bs-toggle="popover"
+                                                        <a role="button" class="float-right" href=#"
+                                                           data-bs-toggle="popover"
                                                            title="Image Collection Info"
                                                            data-bs-trigger="focus"
                                                            data-bs-content="Use this space to offer a description of the dataset.
@@ -150,7 +151,7 @@
                                                                step="0.01"
                                                                style="display: none;"
                                                         /><label class="ml-1"
-                                                                                           id="collection_opacity"></label>
+                                                                 id="collection_opacity"></label>
 
                                                         <p>
 
@@ -160,7 +161,8 @@
                                                                                       id="asset"
                                                                                       type="checkbox"/>
                                                                 Public GEE User Asset</label>
-                                                            <a role="button" class="float-right" href=#" data-bs-toggle="popover"
+                                                            <a role="button" class="float-right" href=#"
+                                                               data-bs-toggle="popover"
                                                                data-bs-trigger="focus" title="User Asset Info"
                                                                data-bs-content="Precipitation factor for carbon monitoring estimations.
                                                    For this template we are using a GEE User Asset that is exposed publicly.
@@ -175,7 +177,7 @@
                                                                step="0.01"
                                                                style="display: none;'"
                                                         /><label class="ml-1"
-                                                                                   id="asset_opacity"></label>
+                                                                 id="asset_opacity"></label>
                                                     </div>
                                                     <!-- Tab pane: Basemaps -->
                                                     <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
