--- a/templates/WebApp/map_from_GEE_about.html
+++ b/templates/WebApp/map_from_GEE_about.html
@@ -8,10 +8,11 @@
                     <h1 class="modal-title fs-5" id="geeModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                                <div class="modal-body">
+                <div class="modal-body">
                     <div class="container">
                         <h2>Display GEE layers on fixed size map</h2>
-                        <p>This page is designed to provide visualization of layers from Google Earth Engine. In this template we are using Image Collection and User Asset layers.</p>
+                        <p>This page is designed to provide visualization of layers from Google Earth Engine. In this
+                            template we are using Image Collection and User Asset layers.</p>
                         <ul>
                             <li>The layout and content of this page is defined in the template
                                 located at
@@ -20,7 +21,9 @@
                             </li>
                             <li>For layout and styling we rely on standard bootstrap containers, however,
                                 you can add your own CSS classes in the
-                                <mark>WebApp\static\css\base.css</mark> and <mark>WebApp\static\css\gee_map.css</mark>
+                                <mark>WebApp\static\css\base.css</mark>
+                                and
+                                <mark>WebApp\static\css\gee_map.css</mark>
                                 files.
                             </li>
                             </li>
@@ -29,7 +32,8 @@
                                 <mark>WebApp\static\js\map_from_GEE.js</mark>
                                 .
                             </li>
-                            <li>The code for this Django view is in the <strong>map_from_gee</strong> function, located in
+                            <li>The code for this Django view is in the <strong>map_from_gee</strong> function, located
+                                in
                                 <mark>WebApp\views.py</mark>
                             </li>
                             <li>The URL for this page is defined through the <strong>urlpatterns</strong>
