--- a/templates/WebApp/select_aoi_about.html
+++ b/templates/WebApp/select_aoi_about.html
@@ -8,10 +8,11 @@
                     <h1 class="modal-title fs-5" id="aoiModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                 <div class="modal-body">
+                <div class="modal-body">
                     <div class="container">
                         <h2>Select AOI on a map</h2>
-                        <p>In this template we are using the map controls to draw a polygon and download GEOJSON file from the drawn polygon.</p>
+                        <p>In this template we are using the map controls to draw a polygon and download GEOJSON file
+                            from the drawn polygon.</p>
                         <ul>
                             <li>The layout and content of this page is defined in the template
                                 located at
