--- a/templates/WebApp/setup.html
+++ b/templates/WebApp/setup.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-                    <div class="row">
+        <div class="row">
             <div class="col-lg-12 mb-4">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
@@ -37,13 +37,28 @@
                     </div>
                     <div class="card-body">
                         <div class="text-left text-dark">
-                            <p>This application is based on the Django framework. The folder structure is as follows:</p>
+                            <p>This application is based on the Django framework. The folder structure is as
+                                follows:</p>
                             <ul>
-<li><b>/SERVIR_AppTemplate</b> - Main “project” folder. This folder name is determined when you initiate your project, using the django-admin startproject [project_name] command in python. This command creates the folder and the configuration files for the entire project.</li>
-<li><b>/WebApp</b> - This is the main application in our project. A project may contain multiple applications. An application is initialized by running the command python manage.py startapp [app_name] from your main folder. Each application folder contains its own folder structure to host the code and files particular to that application.</li>
-<li><b>/staticfiles</b> - This folder contains static files that are common to all applications in the project, for example logos and stylesheets.</li>
-<li><b>/templates</b> - Under this folder, you will find subfolders for each one of the applications used in the project, containing the html template files used in the different pages if the app.</li>
-</ul>
+                                <li><b>/SERVIR_AppTemplate</b> - Main “project” folder. This folder name is determined
+                                    when you initiate your project, using the django-admin startproject [project_name]
+                                    command in python. This command creates the folder and the configuration files for
+                                    the entire project.
+                                </li>
+                                <li><b>/WebApp</b> - This is the main application in our project. A project may contain
+                                    multiple applications. An application is initialized by running the command python
+                                    manage.py startapp [app_name] from your main folder. Each application folder
+                                    contains its own folder structure to host the code and files particular to that
+                                    application.
+                                </li>
+                                <li><b>/staticfiles</b> - This folder contains static files that are common to all
+                                    applications in the project, for example logos and stylesheets.
+                                </li>
+                                <li><b>/templates</b> - Under this folder, you will find subfolders for each one of the
+                                    applications used in the project, containing the html template files used in the
+                                    different pages if the app.
+                                </li>
+                            </ul>
 
 
                         </div>
@@ -51,7 +66,7 @@
                 </div>
             </div>
         </div>
-            <div class="row">
+        <div class="row">
             <div class="col-lg-12 mb-4">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
@@ -61,22 +76,35 @@
                         <div class="text-left text-dark">
                             <p>To customize and launch an application based on this template you will need to:</p>
 
-                          <ul>
-<li><b>Clone and run the AppTemplate2022</b> - this will give you the opportunity to see the look and feel of the application.  You will also be able to view the project structure and all of the template code.  At this stage you should start to think about which features would be useful in your specific application.</li>
-<li><b>Start a new project</b> - This will allow you to have a unique project name that fits your purpose. </li>
-<li><b>Copy the key directories into your new project</b> - Copy the WebApp and templates directories from the AppTemplate2022 folder into your new project.</li>
-<li><b>Modify the code</b> -  This way you can use just the features your application needs and connect your data to the application.</li>
-<li><b>Create your own github repo for your application</b> - You can push updates for version control as well as make it easier to get assistance when needed.</li>
-<li><b>Publish your application to a web server.</b></li>
-</ul>
-                            <p>  Detailed instructions for each step of the process will be found in the <a target="_blank" href="https://github.com/SERVIR/AppTemplate2022">GitHub repository</a> for this template.</p>
+                            <ul>
+                                <li><b>Clone and run the AppTemplate2022</b> - this will give you the opportunity to see
+                                    the look and feel of the application. You will also be able to view the project
+                                    structure and all of the template code. At this stage you should start to think
+                                    about which features would be useful in your specific application.
+                                </li>
+                                <li><b>Start a new project</b> - This will allow you to have a unique project name that
+                                    fits your purpose.
+                                </li>
+                                <li><b>Copy the key directories into your new project</b> - Copy the WebApp and
+                                    templates directories from the AppTemplate2022 folder into your new project.
+                                </li>
+                                <li><b>Modify the code</b> - This way you can use just the features your application
+                                    needs and connect your data to the application.
+                                </li>
+                                <li><b>Create your own github repo for your application</b> - You can push updates for
+                                    version control as well as make it easier to get assistance when needed.
+                                </li>
+                                <li><b>Publish your application to a web server.</b></li>
+                            </ul>
+                            <p> Detailed instructions for each step of the process will be found in the <a
+                                    target="_blank" href="https://github.com/SERVIR/AppTemplate2022">GitHub
+                                repository</a> for this template.</p>
 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
 
     </div>
